# kate-wakatime

./: .clang-format  .cmake-format.yaml  .cz.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .wiswa.jsonnet  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE.txt  README.md  SECURITY.md  configdialog.ui  kate-wakatime.kdev4  ktexteditor_wakatime.desktop  ktexteditor_wakatime.json  offlinequeue.cpp  offlinequeue.h  package.json  plugin.qrc  ui.rc  vcpkg.json  wakatimeplugin.cpp  wakatimeplugin.h  wakatimeview.h
.claude/agents/: copy-editor.md  regen.md  release.md  wiswa-sync.md
.claude/rules/: cpp.md
.claude/skills/ci/: SKILL.md
.cursor/rules/: cpp.mdc
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: cpp.instructions.md  general.instructions.md
.github/workflows/: clang-format.yml  cmake.yml  codeql.yml  pages.yml  publish-msys2.yml  publish-winget.yml  qa.yml  release.yml  tests.yml
WakaTime/: CMakeLists.txt  WakaTime.kdev4  wakatimeplugin.cpp  wakatimeplugin.h  wakatimeui.rc  wakatimeview.h
src/: CMakeLists.txt  configdialog.ui  ktexteditor_wakatime.json  plugin.qrc  ui.rc  wakatime.cpp  wakatime.h  wakatimeconfig.cpp  wakatimeconfig.h  wakatimeplugin.cpp  wakatimeplugin.h
src/autotests/: CMakeLists.txt  basic.cpp  clienttest.cpp  configtest.cpp
